--- a/project.config.json
+++ b/project.config.json
@@ -26,7 +26,14 @@
 		},
 		"miniprogram": {
 			"current": -1,
-			"list": []
+			"list": [
+				{
+					"id": -1,
+					"name": "news-detail",
+					"pathName": "pages/news-detail/news-detail",
+					"query": "id=1523074607637"
+				}
+			]
 		}
 	}
 }
