index: add pull down refresh

--- a/app.json
+++ b/app.json
@@ -8,6 +8,6 @@
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#857dd1",
     "navigationBarTitleText": "xe-news",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "#fff"
   }
 }
